src/objects/Camping_Reservation__c.object
<CustomObject>
    <fields>
        <fullName>Camping_Item__c</fullName>
        <label>Camping Item</label>
        <referenceTo>Camping_Item__c</referenceTo>
        <relationshipLabel>Camping Reservations</relationshipLabel>
        <relationshipName>Camping_Reservations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Check_In__c</fullName>
        <label>Check In</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Check_Out__c</fullName>
        <label>Check Out</label>
        <type>Date</type>
    </fields>
    <label>Camping Reservation</label>
    <nameField>
        <label>Camping Reservation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Camping Reservations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>